dhall/tests/type-inference/failure/unit/TypeAnnotationWrong.txt
Type error: error: annot mismatch: Natural != Bool
 --> <current file>:1:0
  |
1 | 1 : Bool
  | ^ annot mismatch: Natural != Bool
  |
